--- a/src/services/NSE.Identidade.API/appsettings.Development.json
+++ b/src/services/NSE.Identidade.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppSettings": {
+    "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
+    "ExpiracaoHoras": 2,
+    "Emissor": "NerdStoreEnterprise",
+    "ValidoEm": "https://localhost"
   }
 }
