atualizações de refatoração e melhorias

--- a/src/services/NSE.Identidade.API/appsettings.Development.json
+++ b/src/services/NSE.Identidade.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=NerdStoreEnterpriseDB;Database=NerdStoreEnterpriseDB;User id=sa;Password=123456;Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
