--- a/src/services/NSE.Identidade.API/Properties/launchSettings.json
+++ b/src/services/NSE.Identidade.API/Properties/launchSettings.json
@@ -42,13 +42,13 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true,
-      "useSSL": true
-    }
+    }//,
+    //"Docker": {
+    //  "commandName": "Docker",
+    //  "launchBrowser": true,
+    //  "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+    //  "publishAllPorts": true,
+    //  "useSSL": true
+    //}
   }
 }
