--- a/src/services/NSE.Identidade.API/appsettings.Development.json
+++ b/src/services/NSE.Identidade.API/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=NerdStoreEnterpriseDB;Database=NerdStoreEnterpriseDB;User id=sa;Password=123456;Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
- }
+  "AppSettings": {
+    "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
+    "ExpiracaoHoras": 2,
+    "Emissor": "NerdStoreEnterprise",
+    "ValidoEm": "https://localhost"
+  }
+}
