refatoração e tratamento do response

--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AutenticacaoUrl": "https://localhost:7109",
+  "CatalogoUrl": "https://localhost:7108",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
