--- a/src/services/NSE.Catalogo.API/NSE.Catalogo.API.csproj
+++ b/src/services/NSE.Catalogo.API/NSE.Catalogo.API.csproj
@@ -23,11 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\building blocks\NSE.Core\NSE.Core.csproj" />
+    <ProjectReference Include="..\NSE.Identidade.API\NSE.Identidade.API.csproj" />
   </ItemGroup>
 
 </Project>
