--- a/src/services/NSE.Catalogo.API/appsettings.json
+++ b/src/services/NSE.Catalogo.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "AppSettings": {
+    "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
+    "ExpiracaoHoras": 2,
+    "Emissor": "NerdStoreEnterprise",
+    "ValidoEm": "https://localhost"
+  },
   "AllowedHosts": "*"
 }
