Configuração JWT genérico para outras API's

--- a/src/services/NSE.Catalogo.API/appsettings.Development.json
+++ b/src/services/NSE.Catalogo.API/appsettings.Development.json
@@ -6,6 +6,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "AppSettings": {
+      "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
+      "ExpiracaoHoras": 2,
+      "Emissor": "NerdStoreEnterprise",
+      "ValidoEm": "https://localhost"
     }
   }
 }
