--- a/src/services/NSE.Identidade.API/NSE.Identidade.API.csproj
+++ b/src/services/NSE.Identidade.API/NSE.Identidade.API.csproj
@@ -29,4 +29,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\NSE.WebAPI.Core\NSE.WebAPI.Core.csproj" />
+  </ItemGroup>
+
 </Project>
