--- a/src/services/NSE.Carrinho.API/Properties/launchSettings.json
+++ b/src/services/NSE.Carrinho.API/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14185",
-      "sslPort": 44320
+      "applicationUrl": "http://localhost:65391/",
+      "sslPort": 44339
     }
   },
   "profiles": {
