--- a/src/web/NSE.WebApp.MVC/NSE.WebApp.MVC.csproj
+++ b/src/web/NSE.WebApp.MVC/NSE.WebApp.MVC.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Refit" Version="6.2.16" />
   </ItemGroup>
