--- a/src/services/NSE.Cliente.API/NSE.Cliente.API.csproj
+++ b/src/services/NSE.Cliente.API/NSE.Cliente.API.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\NSE.Core\NSE.Core.csproj" />
+  </ItemGroup>
+
 </Project>
