--- a/src/services/NSE.Identidade.API/appsettings.Development.json
+++ b/src/services/NSE.Identidade.API/appsettings.Development.json
@@ -8,6 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+    //"MessageBus": "amqp://guest:guest@rabbit-host:5672/%2ffilestream;publisherConfirms=true;timeout=10"
+  },
   "AppSettings": {
     "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
     "ExpiracaoHoras": 2,
