--- a/src/services/NSE.Cliente.API/appsettings.Development.json
+++ b/src/services/NSE.Cliente.API/appsettings.Development.json
@@ -7,10 +7,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     },
-    "MessageQueueConnection": {
-      "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
-      //"MessageBus": "amqp://guest:guest@rabbit-host:5672/%2ffilestream;publisherConfirms=true;timeout=10"
-    },
+    //"MessageQueueConnection": {
+    //  "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+    //  //"MessageBus": "amqp://guest:guest@rabbit-host:5672/%2ffilestream;publisherConfirms=true;timeout=10"
+    //},
+    "MessageQueueConnection": "host=localhost:5672;publisherConfirms=true;timeout=10",
     "AppSettings": {
       "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
       "ExpiracaoHoras": 2,
