atualização regras de negocio e validacoes do carrinho

--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "AutenticacaoUrl": "https://localhost:7109",
   "CatalogoUrl": "https://localhost:7219",
+  "CarrinhoUrl": "https://localhost:7035",
 
   "Logging": {
     "LogLevel": {
