Implementação BFF para compras

--- a/src/services/NSE.Carrinho.API/bin/NSE.Carrinho.API/appsettings.json
+++ b/src/services/NSE.Carrinho.API/bin/NSE.Carrinho.API/appsettings.json
@@ -5,7 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=NerdStoreEnterpriseDB;Database=NerdStoreEnterpriseDB;User id=sa;Password=123456;Integrated Security=SSPI;"
+  },
   "AppSettings": {
     "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
     "ExpiracaoHoras": 2,
