--- a/src/building blocks/NSE.WebAPI.Core/NSE.WebAPI.Core.csproj
+++ b/src/building blocks/NSE.WebAPI.Core/NSE.WebAPI.Core.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.3.6" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
+    <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
