--- a/src/services/NSE.Carrinho.API/bin/NSE.Carrinho.API/NSE.Carrinho.API.csproj
+++ b/src/services/NSE.Carrinho.API/bin/NSE.Carrinho.API/NSE.Carrinho.API.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\building blocks\NSE.WebAPI.Core\NSE.WebAPI.Core.csproj" />
+    <ProjectReference Include="..\..\..\NSE.Identidade.API\NSE.Identidade.API.csproj" />
   </ItemGroup>
 
 </Project>
