--- a/src/api gateways/NSE.Bff.Compras/appsettings.Development.json
+++ b/src/api gateways/NSE.Bff.Compras/appsettings.Development.json
@@ -1,9 +1,29 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "CatalogoUrl": "https://localhost:7219",
+  "CarrinhoUrl": "https://localhost:49153",
+  "PedidoUrl": "https://localhost:7051",
+  "PagamentoUrl": "https://localhost:44314",
+  "ClienteUrl": "https://localhost:44317",
+
+  //"MessageQueueConnection": {
+  //  "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  //},
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+    //"MessageBus": "amqp://guest:guest@rabbit-host:5672/%2ffilestream;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
+    "ExpiracaoHoras": 2,
+    "Emissor": "NerdStoreEnterprise",
+    "ValidoEm": "https://localhost"
   }
 }
