--- a/src/services/NSE.Carrinho.API/bin/NSE.Carrinho.API/appsettings.Development.json
+++ b/src/services/NSE.Carrinho.API/bin/NSE.Carrinho.API/appsettings.Development.json
@@ -7,6 +7,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     },
+    "MessageQueueConnection": {
+      "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+      //"MessageBus": "amqp://guest:guest@rabbit-host:5672/%2ffilestream;publisherConfirms=true;timeout=10"
+    },
     "AppSettings": {
       "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
       "ExpiracaoHoras": 2,
