Atualização abstração do ResponseResult Padrão

--- a/src/building blocks/NSE.WebAPI.Core/NSE.WebAPI.Core.csproj
+++ b/src/building blocks/NSE.WebAPI.Core/NSE.WebAPI.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NSE.Core\NSE.Core.csproj" />
+  </ItemGroup>
+
 </Project>
