atualização para bff

--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -2,6 +2,7 @@
   "AutenticacaoUrl": "https://localhost:7109",
   "CatalogoUrl": "https://localhost:7219",
   "CarrinhoUrl": "https://localhost:49153",
+  "ComprasBffUrl": "https://localhost:49157",
 
   "Logging": {
     "LogLevel": {
