--- a/src/services/NSE.Pedido.API/appsettings.Development.json
+++ b/src/services/NSE.Pedido.API/appsettings.Development.json
@@ -1,8 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=NerdStoreEnterpriseDB;Database=NerdStoreEnterpriseDB;User id=sa;Password=123456;Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+    //"MessageBus": "amqp://guest:guest@rabbit-host:5672/%2ffilestream;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
+    "ExpiracaoHoras": 2,
+    "Emissor": "NerdStoreEnterprise",
+    "ValidoEm": "https://localhost"
   }
 }
