--- a/src/services/NSE.Pedido.API/NSE.Pedido.API.csproj
+++ b/src/services/NSE.Pedido.API/NSE.Pedido.API.csproj
@@ -29,7 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\NSE.MessageBus\NSE.MessageBus.csproj" />
     <ProjectReference Include="..\..\building blocks\NSE.WebAPI.Core\NSE.WebAPI.Core.csproj" />
-    <ProjectReference Include="..\NSE.Pedidos.Infra\NSE.Pedidos.Infra\NSE.Pedidos.Infra.csproj" />
+    <ProjectReference Include="..\NSE.Pedidos.Domain\NSE.Pedidos.Domain\NSE.Pedidos.Domain.csproj" />
   </ItemGroup>
 
 </Project>
