--- a/src/building blocks/NSE.Core/NSE.Core.csproj
+++ b/src/building blocks/NSE.Core/NSE.Core.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="10.3.6" />
+    <PackageReference Include="FluentValidation" Version="10.4.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="NetDevPack" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
