--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -3,6 +3,7 @@
   "CatalogoUrl": "https://localhost:7219",
   "CarrinhoUrl": "https://localhost:49153",
   "ComprasBffUrl": "https://localhost:49157",
+  "ClienteUrl": "https://localhost:49157",
 
   "Logging": {
     "LogLevel": {
