Implementando Facade na api de pagamentos

--- a/src/services/NSE.Pagamento.API/appsettings.Development.json
+++ b/src/services/NSE.Pagamento.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "PagamentoConfig": {
+    "DefaultApiKey": "ak_ewr4dsWehiwAT",
+    "DefaultEncryptionKey": "ek_SweRsdFas4uT5"
   }
 }
