--- a/src/services/NSE.Pagamento.API/appsettings.Development.json
+++ b/src/services/NSE.Pagamento.API/appsettings.Development.json
@@ -8,5 +8,18 @@
   "PagamentoConfig": {
     "DefaultApiKey": "ak_ewr4dsWehiwAT",
     "DefaultEncryptionKey": "ek_SweRsdFas4uT5"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=NerdStoreEnterpriseDB;Database=NerdStoreEnterpriseDB;User id=sa;Password=123456;Integrated Security=SSPI;"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+    //"MessageBus": "amqp://guest:guest@rabbit-host:5672/%2ffilestream;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
+    "ExpiracaoHoras": 2,
+    "Emissor": "NerdStoreEnterprise",
+    "ValidoEm": "https://localhost"
   }
 }
