implementacao jwk com jwks e Refresh Token

--- a/src/api gateways/NSE.Bff.Compras/appsettings.Development.json
+++ b/src/api gateways/NSE.Bff.Compras/appsettings.Development.json
@@ -21,9 +21,6 @@
     //"MessageBus": "amqp://guest:guest@rabbit-host:5672/%2ffilestream;publisherConfirms=true;timeout=10"
   },
   "AppSettings": {
-    "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
-    "ExpiracaoHoras": 2,
-    "Emissor": "NerdStoreEnterprise",
-    "ValidoEm": "https://localhost"
+    "AutenticacaoJwksUrl": "https://localhost:7109/jwks"
   }
 }
