--- a/src/services/NSE.Catalogo.API/appsettings.Development.json
+++ b/src/services/NSE.Catalogo.API/appsettings.Development.json
@@ -8,10 +8,7 @@
       "Microsoft.AspNetCore": "Warning"
     },
     "AppSettings": {
-      "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
-      "ExpiracaoHoras": 2,
-      "Emissor": "NerdStoreEnterprise",
-      "ValidoEm": "https://localhost"
+      "AutenticacaoJwksUrl": "https://localhost:7109/jwks"
     }
   }
 }
