--- a/src/services/NSE.Cliente.API/appsettings.Development.json
+++ b/src/services/NSE.Cliente.API/appsettings.Development.json
@@ -13,10 +13,7 @@
     //},
     "MessageQueueConnection": "host=localhost:5672;publisherConfirms=true;timeout=10",
     "AppSettings": {
-      "Secret": "MYSUPERMEGAHIDDENSECRETKEY",
-      "ExpiracaoHoras": 2,
-      "Emissor": "NerdStoreEnterprise",
-      "ValidoEm": "https://localhost"
+      "AutenticacaoJwksUrl": "https://localhost:7109/jwks"
     }
   }
 }
