--- a/src/api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj
+++ b/src/api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj
@@ -10,6 +10,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Google.Protobuf" Version="3.21.1" />
+		<PackageReference Include="Grpc.Net.ClientFactory" Version="2.46.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.46.3">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.3" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -22,6 +28,11 @@
 		<ProjectReference Include="..\..\building blocks\NSE.Core\NSE.Core.csproj" />
 		<ProjectReference Include="..\..\building blocks\NSE.MessageBus\NSE.MessageBus.csproj" />
 		<ProjectReference Include="..\..\building blocks\NSE.WebAPI.Core\NSE.WebAPI.Core.csproj" />
+		<ProjectReference Include="..\..\services\NSE.Carrinho.API\bin\NSE.Carrinho.API\NSE.Carrinho.API.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<Protobuf Include="..\..\services\NSE.Carrinho.API\bin\NSE.Carrinho.API\Protos\carrinho.proto" GrpcServices="Client" />
+	</ItemGroup>
+	
 </Project>
