--- a/src/api gateways/NSE.Bff.Compras/Dockerfile
+++ b/src/api gateways/NSE.Bff.Compras/Dockerfile
@@ -7,10 +7,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["src/api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj", "src/api gateways/NSE.Bff.Compras/"]
-RUN dotnet restore "src/api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj"
+COPY ["./api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj", "api gateways/NSE.Bff.Compras/"]
+RUN dotnet restore "api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj"
 COPY . .
-WORKDIR "/src/src/api gateways/NSE.Bff.Compras"
+WORKDIR "api gateways/NSE.Bff.Compras"
 RUN dotnet build "NSE.Bff.Compras.csproj" -c Release -o /app/build
 
 FROM build AS publish
